# pkg

./: .gitignore  Cargo.toml  Makefile  chroot.sh  create-image  installer.py  logo.txt  meow-craft  pkgstrap.sh  rustfmt.toml  src.mz  test.py  verify.sh
libmeow/: Cargo.toml
libmeow/src/: columned.rs  lib.rs  meowdb.rs  meowzip.rs
meow-pkg/: Cargo.toml
meow-pkg/src/: cli.rs  info.rs  install.rs  list.rs  main.rs  remove.rs
meow-zip/: Cargo.toml  minisign.pub
meow-zip/src/: cli.rs  create.rs  extract.rs  info.rs  list.rs  main.rs  verify.rs
src/: build.rs  cli.rs  config.rs  index.rs  main.rs  manifest.rs  package.rs  sync.rs
src/commands/: cli.rs  mod.rs  reconfigure.rs  sync.rs  zip.rs
src/meowzip/: container.rs  mod.rs  reader.rs  writer.rs
