[package]
name = "pkg"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete_command = "0.6.1"
clap_derive = "4.5.49"
colored = "3.0.0"
fxhash = "0.2.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
