[package]
name = "libmeow"
edition = "2024"

[lib]
name = "libmeow"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
clap = "4.5.51"
eyre = "0.6.12"
nix = { version = "0.30.1", features = ["user"] }
redb = "3.1.0"
termion = "4.0.5"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
